syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_customer.proto";
import "rpc_login_customer.proto";
import "rpc_update_customer.proto";
import "rpc_appointment.proto";

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "barbershop/src/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "Barber Shop API",
      version: "1.1";
      contact: {
        name: "Thinh Kai";
        url: "";
        email: "dvanthinh06@gmail.com";
      };
    //   license: {
    //     name: "BSD 3-Clause License";
    //     url: "https://github.com/grpc-ecosystem/grpc-gateway/blob/main/LICENSE";
    //   };
    //   extensions: {
    //     key: "x-something-something";
    //     value {string_value: "yadda"}
    //   }
    };
};

service AuthCustomerBarberShop {
    rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerResponse){
        option (google.api.http) = {
                  post: "/v1/create_customer"
                  body: "*"
                };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "API endpoint to create a account"
          summary: "Create a account"
        };
    }

    rpc LoginCustomer (LoginCustomerRequest) returns (LoginCustomerResponse) {
      option (google.api.http) = {
        post: "/v1/authenticate_customer"
        body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        description: "API endpoint for customer authentication" 
        summary: "Authenticate a customer"
      };
    }

    rpc UpdateCustomer (UpdateCustomerRequest) returns (UpdateCustomerResponse) {
      option (google.api.http) = {
        patch: "/v1/authenticate_customer"
        body: "*"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        description: "API endpoint for user authentication" 
        summary: "Authenticate a user"
      };
    }

    rpc NewAppointment (CreateAppointmentRequest) returns (CreateAppointmentResponse){
      option (google.api.http) = {
                post: "/v1/create_appointment"
                body: "*"
              };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        description: "API endpoint to create a new barber"
        summary: "Create a service Appointments"
      };
    }
}

